--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,15 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--android:name="io.flutter.app.FlutterApplication"-->
+
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name=".App"
         android:icon="@mipmap/ic_launcher"
         android:label="ghumao">
         <activity
@@ -23,11 +30,12 @@
         </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="" />
+            android:value="AIzaSyA3_wfvXmoA9FWCMZnRTw96MA4DSPSop7o" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <service android:name=".GPS_Service" />
     </application>
 </manifest>
